crates/vize_atelier_sfc/src/script/define_props_destructure/snapshots/vize_atelier_sfc__script__define_props_destructure__tests__tests__transform_multiple_refs.snap
---
source: crates/vize_atelier_sfc/src/script/define_props_destructure/tests.rs
expression: result.as_str()
---
const result = __props.foo + __props.bar
