crates/vize_atelier_sfc/src/script/define_props_destructure/snapshots/vize_atelier_sfc__script__define_props_destructure__tests__tests__transform_shadowed_in_for_in.snap
---
source: crates/vize_atelier_sfc/src/script/define_props_destructure/tests.rs
expression: result.as_str()
---
for (const key in obj) {
    console.log(key)
}
