crates/vize_atelier_sfc/src/script/define_props_destructure/snapshots/vize_atelier_sfc__script__define_props_destructure__tests__tests__transform_ternary.snap
---
source: crates/vize_atelier_sfc/src/script/define_props_destructure/tests.rs
expression: result.as_str()
---
const display = __props.show ? 'visible' : 'hidden'
